feat: code cleanup

--- a/app/templates/email.html
+++ b/app/templates/email.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<head></head>
+<head><title>Message</title></head>
 
 <body>
     <h1 style="color: {msg_h1_color};">{msg_h1}</h1>
